--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-15  Tomohiro Matsuyama  <tomo@cx4a.org>
+
+	* alloc.c (emacs_blocked_malloc): Remove redundant MALLOC_PROBE.
+
 2012-08-21  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* alloc.c: Use bool for booleans.
