In compilation-error-regexp-alist, allow more HIGHLIGHT types.
* progmodes/compile.el (compilation-parse-errors): Apply any value
that is a valid font-lock-face property.
(compilation-error-regexp-alist): Doc fix.

--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-16  Chong Yidong  <cyd@gnu.org>
+
+	* progmodes/compile.el (compilation-parse-errors): Apply any value
+	that is a valid font-lock-face property (Bug#12136).
+	(compilation-error-regexp-alist): Doc fix.
+
 2012-09-15  Glenn Morris  <rgm@gnu.org>
 
 	* version.el (emacs-bzr-version-bzr): New function.
