font.c (Ffont_shape_gstring): Fix previous change; GLYPHs may not covert the last few charactes.

--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-17  Kenichi Handa  <handa@gnu.org>
+
+	* font.c (Ffont_shape_gstring): Fix previous change; GLYPHs may
+	not covert the last few charactes.
+
 2012-09-16  Kenichi Handa  <handa@gnu.org>
 
 	* font.c (Ffont_shape_gstring): Don't adjust grapheme cluster
