--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-16  Leo Liu  <sdl.web@gmail.com>
+
+	IDO: Disable match re-ordering for buffer switching.
+	* ido.el (ido-confirm-unique-completion): New variable.
+	(ido-set-matches-1): Use it.  (Bug#2042)
+
 2012-09-12  Jose Marino  <marinoj@nso.edu>  (tiny change)
 
 	* progmodes/idlw-shell.el (idlwave-shell-complete-filename):
