--- a/nextstep/ChangeLog
+++ b/nextstep/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-17  Glenn Morris  <rgm@gnu.org>
+
+	* templates/Info-gnustep.plist.in, templates/InfoPlist.strings.in:
+	* templates/Info.plist.in: Let configure set copyright.
+
 2012-09-16  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in: New file.
