--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,7 @@
+2012-09-17  Glenn Morris  <rgm@gnu.org>
+
+	* emacs.c: Use COPYRIGHT.
+
 2012-09-16  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Remove configure's --without-sync-input option (Bug#12450).
