--- a/lisp/gnus/ChangeLog
+++ b/lisp/gnus/ChangeLog
@@ -1,5 +1,7 @@
 2012-09-17  Richard Stallman  <rms@gnu.org>
 
+	* message.el (message-in-body-p): Don't set mark or modify buffer.
+
 	* mml.el (mml-attach-file): Doc fix.
 	(mml-attach-external, mml-attach-buffer, mml-attach-file):
 	Set mail-encode-mml when in Mail mode.
