--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,10 @@
 2012-09-17  Richard Stallman  <rms@gnu.org>
 
+	* mail/rmailmm.el (rmail-mime-toggle-raw): Do rmail-mime-insert
+	only in the mime-shown mode, not in raw mode.
+	(rmail-mime): Toggle off mime by displaying the message without
+	mime processing.
+
 	* mail/rmail.el (rmail-retry-failure): Turn off mime processing first.
 
 	* epa-mail.el (epa-mail-encrypt): Fix bug when a name has no key.
