--- a/nt/ChangeLog
+++ b/nt/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-17  Juanma Barranquero  <lekktu@gmail.com>
+
+	* config.nt: Sync with autogen/config.in.
+	(BROKEN_SA_RESTART, SYNC_INPUT): Remove.
+
 2012-09-17  Glenn Morris  <rgm@gnu.org>
 
 	* config.nt (COPYRIGHT): New.
