--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-09-18  Martin Blais  <blais@furius.ca>  (tiny change)
+
+	* progmodes/compile.el (compilation-start): Use compilation-always-kill
+	to initialize query-on-exit; then test that instead (bug#12288).
+
 2012-09-17  Stefan Merten  <smerten@oekonux.de>
 
 	* rst.el: Add support for `testcover'.
@@ -1702,7 +1707,7 @@
 	:local as the address.
 	(list-processes): Doc fix.
 
-2012-08-04  Michal Nazarewicz  <mina86@mina86.com>  (tiny change)
+2012-08-04  Michal Nazarewicz  <mina86@mina86.com>
 
 	* lisp/mpc.el: Support password in host argument.
 	(mpc--proc-connect): Parse and use new password element.
