--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,10 @@
+2012-09-18  Martin Rudalics  <rudalics@gmx.at>
+
+	* emacs-lisp/debug.el (debugger-bury-or-kill): Fix customization
+	value.
+	(debug): Don't remove debugger window when debugger is expected
+	to be back.
+
 2012-09-18  Chong Yidong  <cyd@gnu.org>
 
 	* custom.el (defface): Doc fix.
