--- a/etc/NEWS
+++ b/etc/NEWS
@@ -468,8 +468,8 @@ file at point.
 mark/unmark/flag all files in the active region.
 
 *** The minibuffer default for `=' (`dired-diff) has changed.
-It is now the backup file for the file at point, if one exists, rather
-than the file at the mark.
+It is now the backup file for the file at point, if one exists.
+In Transient Mark mode the default is the file at the active mark.
 
 *** `M-=' is no longer bound to `dired-backup-diff' in Dired buffers.
 The global binding for `M-=', `count-words-region' is in effect.
