--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,9 @@
+2012-09-19  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* frame.c (read_integer): Remove.  All uses replaced by strtol/strtoul.
+	(XParseGeometry): Now static.  Substitute extremal values for
+	values that are out of range.
+
 2012-09-19  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* w32xfns.c (read_integer, XParseGeometry): Move to frame.c.
